july_xxii release

--- a/eventTabs/july_xxii_/hoops.html
+++ b/eventTabs/july_xxii_/hoops.html
@@ -13,20 +13,20 @@
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne">
               <div class="card-body">
                 Hello! My name is iDavis and for this event I'm trying a brand new feature on my website - the <b>Chests Comparator</b>!<br><br>
-                You can see all the available chests (or as they are called this time - hoops <img src="https://i.ibb.co/frWgY04/EL-stranka-scroll-aquatic-chest1.png" width="20px;">) during the <b>Lucky Little Fin</b> event below including all their prices, chances and rewards!
-                The values are - as always on my website - automatically generated from the game, so it ensures quick updates if anything in the game gets changed.<br><br>
-                At the same time I'm also introducing new sorting feature, which can be used to sort these chests to help
+                You can see all the available chests (or as they are called this time - hoops <img src="https://i.ibb.co/frWgY04/EL-stranka-scroll-aquatic-chest1.png" width="20px;">) during the <b>Lucky Little Fin</b> event below, including all their prices, chances and rewards!
+                The values are - as always on the website - automatically generated from the game, so it ensures quick updates in case anything in the game gets changed.<br><br>
+                At the same time I'm also introducing the new sorting feature, which can be used to sort these chests to help
                 you find the bests chests for obtaining either Grand Prizes or Daily Prizes of this event!
                 The values of chests' rewards work together with the chapter system on this website, so make sure 
                 that your selected chapter (in the right top corner) is correct! The rewards in these chests vary from chapter to chapter
                 so make sure you set this up in order to see proper rewards for your current ingame progress!<br><br>
                 I will keep repeating this feature in future events and it will
                 always appear as an additional tab within the left panel of this site (next to Calendar and Quests). I have ideas for
-                even more such additional tabs, so stay tuned! :)<br><br>
+                even more such additional tabs, so stay tuned! 🙂<br><br>
                 For more information about how this feature works, check out my latest video below. If you have any questions, feel free
-                to use its comment section and I will be more than happy to answer. :)<br><br>
+                to use its comment section and I will do my best to answer. 🙂<br><br>
                 <center>
-                  <iframe allowfullscreen="true" src="https://www.youtube.com/embed/?" style="width: 560px; height: 315.2px;"></iframe>
+                  <iframe allowfullscreen="true" src="https://www.youtube.com/embed/zqgJUn2kRNA" style="width: 560px; height: 315.2px;"></iframe>
                 </center>
               </div>
           </div>
