--- a/eventTabs/july_xxii_/hoops.html
+++ b/eventTabs/july_xxii_/hoops.html
@@ -516,7 +516,7 @@ function draw(chestsData, sort="") {
               let td4 = document.createElement("td");
               td4.colSpan = maxRewards-2;
               if (sort === "dp") {
-                  td4.innerHTML = `<h7><i>`+(100/chestsData[i]["chances"].filter(chance => chance["subType"].startsWith("daily_reward"))[0]["percentage"]*chestsData[i]["ec"]).toFixed(1)
+                  td4.innerHTML = `<h7><i>~ `+(100/chestsData[i]["chances"].filter(chance => chance["subType"].startsWith("daily_reward"))[0]["percentage"]*chestsData[i]["ec"]).toFixed(1)
                   +` <img src='${currencies[getSelectedEvent()]["ec"]}'> per Daily Prize`+`</i></h7>`;
               } else if (sort === "gp") {
                   td4.innerHTML = `<h7><i>`+(20/chestsData[i]["ep"]*chestsData[i]["ec"]).toFixed(1)
