--- a/guestRaces/woodelves.html
+++ b/guestRaces/woodelves.html
@@ -202,6 +202,16 @@
                         the game! These lists include tasks, rewards and interactive tools for marking your quests as completed, as well as
                         highlighting them for your further preparation. 
                         <br><br>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
+                            crossorigin="anonymous"></script>
+                        <ins class="adsbygoogle"
+                            style="display:block"
+                            data-ad-format="autorelaxed"
+                            data-ad-client="ca-pub-4154227292627045"
+                            data-ad-slot="7635314769"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
                         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">How about the translations?<br></h5>
                         The <b>All Guest Races</b> subpage does not work with translation system of this website. For this reason,
                         I can't use your selected language for all of the content included. However, you are free to use any tool that comes
