--- a/guestRaces/sorcerers.html
+++ b/guestRaces/sorcerers.html
@@ -204,12 +204,11 @@
                         <br><br>
                         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
                             crossorigin="anonymous"></script>
+                        <!-- Content 400x90 -->
                         <ins class="adsbygoogle"
-                            style="display:block"
-                            data-ad-format="fluid"
-                            data-ad-layout-key="-6t+ed+2i-1n-4w"
+                            style="display:inline-block;width:400px;height:90px"
                             data-ad-client="ca-pub-4154227292627045"
-                            data-ad-slot="7940520800"></ins>
+                            data-ad-slot="6652038603"></ins>
                         <script>
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
