--- a/guestRaces/dwarves.html
+++ b/guestRaces/dwarves.html
@@ -40,6 +40,7 @@
     <script src="../database/languages/langUI.js"></script>
     <script src="../javascript/notificationHandler.js"></script>
     <script src="../database/notifications.js"></script>
+    <script src="../database/googleads.js"></script>
     <script src="database/mixedData.js"></script>
     <script src="javascript/utils.js"></script>
     <script src="javascript/quests_handler.js"></script>
@@ -248,6 +249,7 @@
                         to your convenience and you might find it useful that the quest lines are now fully built for copy-paste.
                         I will be considering further options to add this functionality in the future. All the feedback is of course welcomed and you can share it via the contact page
                         of this website.
+                        <script>placeAd("content_neutral", "column_with_tables")</script>
                     </div>
 
                 </div>
