--- a/guestRaces/orcs.html
+++ b/guestRaces/orcs.html
@@ -219,7 +219,7 @@
                         highlighting them for your further preparation. 
                         <br><br>
                         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
-                            crossorigin="anonymous"></script>
+                            crossorigin="anonymous"></script> <!-- In-article -->
                         <ins class="adsbygoogle"
                             style="display:block; text-align:center;"
                             data-ad-layout="in-article"
