ga size adjustment

--- a/guestRaces/dwarves.html
+++ b/guestRaces/dwarves.html
@@ -245,6 +245,19 @@
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
                         </div>
+                        <div class="midcontainer2">
+                            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
+                                crossorigin="anonymous"></script>
+                            <ins class="adsbygoogle"
+                                style="display:block"
+                                data-ad-format="fluid"
+                                data-ad-layout-key="-6t+ed+2i-1n-4w"
+                                data-ad-client="ca-pub-4154227292627045"
+                                data-ad-slot="7940520800"></ins>
+                            <script>
+                                (adsbygoogle = window.adsbygoogle || []).push({});
+                            </script>
+                            </div>
                         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">How about the translations?<br></h5>
                         The <b>All Guest Races</b> subpage does not work with translation system of this website. For this reason,
                         I can't use your selected language for all of the content included. However, you are free to use any tool that comes
