ga size adjustment

--- a/guestRaces/dwarves.html
+++ b/guestRaces/dwarves.html
@@ -232,6 +232,7 @@
                         the game! These lists include tasks, rewards and interactive tools for marking your quests as completed, as well as
                         highlighting them for your further preparation. 
                         <br><br>
+                        <div class="row">
                         <div class="midcontainer">
                         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
                             crossorigin="anonymous"></script>
@@ -258,6 +259,7 @@
                                 (adsbygoogle = window.adsbygoogle || []).push({});
                             </script>
                             </div>
+                        </div>
                         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">How about the translations?<br></h5>
                         The <b>All Guest Races</b> subpage does not work with translation system of this website. For this reason,
                         I can't use your selected language for all of the content included. However, you are free to use any tool that comes
