--- a/guestRaces/fairies.html
+++ b/guestRaces/fairies.html
@@ -230,6 +230,7 @@
                         the game! These lists include tasks, rewards and interactive tools for marking your quests as completed, as well as
                         highlighting them for your further preparation. 
                         <br><br>
+                        <div class="row">
                         <div style="width: 40%; height:40%;" align="left">
                         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
                             crossorigin="anonymous"></script>
@@ -256,6 +257,7 @@
                                 (adsbygoogle = window.adsbygoogle || []).push({});
                             </script>
                             </div>
+                        </div>
                         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">How about the translations?<br></h5>
                         The <b>All Guest Races</b> subpage does not work with translation system of this website. For this reason,
                         I can't use your selected language for all of the content included. However, you are free to use any tool that comes
