--- a/buildings.html
+++ b/buildings.html
@@ -247,6 +247,17 @@
                 </div>
             </div>
         </div>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
+                            crossorigin="anonymous"></script> <!-- In-article -->
+                        <ins class="adsbygoogle"
+                            style="display:block; text-align:center;"
+                            data-ad-layout="in-article"
+                            data-ad-format="fluid"
+                            data-ad-client="ca-pub-4154227292627045"
+                            data-ad-slot="9774392946"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
     </div>
 </div>
 
