ga injecting test

--- a/guestRaces/dwarves.html
+++ b/guestRaces/dwarves.html
@@ -250,7 +250,7 @@
                             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
                                 crossorigin="anonymous"></script>
                             <ins class="adsbygoogle"
-                                style="display:block"
+                                style="display:block; width:40%; height:40%;"
                                 data-ad-format="fluid"
                                 data-ad-layout-key="-6t+ed+2i-1n-4w"
                                 data-ad-client="ca-pub-4154227292627045"
