ga in-article in guest races

--- a/guestRaces/fairies.html
+++ b/guestRaces/fairies.html
@@ -206,6 +206,18 @@
 
 </script>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
+                            crossorigin="anonymous"></script> <!-- In-article -->
+                        <ins class="adsbygoogle"
+                            style="display:block; text-align:center;"
+                            data-ad-layout="in-article"
+                            data-ad-format="fluid"
+                            data-ad-client="ca-pub-4154227292627045"
+                            data-ad-slot="9774392946"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+
 <div id="event_main" style="padding-top: 20px;">
     <div id="event_buildings" style="width: 100%;">
         <div class="container center bg-skin_light_background rounded-bottom75 rounded-top75" style="width: 100%; padding-top: 20px; padding-bottom: 20px;">
