--- a/admin.html
+++ b/admin.html
@@ -157,6 +157,22 @@ Odmena1<br></h7>
     }
 </script>
 
+<div class="container" style="margin-bottom: 20px;">
+    <p>Quests converter js to txt:</p>
+
+
+    Quests in js: <input class="form-control-file" type="file" id="questsjs" name="filename">
+    Chapter: <input type="text" id="chnumber" name="fname" value="ch19"><br>
+    <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="generateQuestsInTxt()">GENERATE</button>
+    <form>
+        <div class="form-group">
+            <label for="exampleFormControlTextarea2">Result (quests in txt):</label>
+            <textarea class="form-control" id="ulohy2" style="height: 300px;" rows="3"></textarea>
+        </div>
+    </form>
+
+</div>
+
 
     
 
