--- a/buildings.html
+++ b/buildings.html
@@ -247,8 +247,8 @@
                 </div>
             </div>
         </div>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
-                            crossorigin="anonymous"></script> <!-- In-article -->
+        <!--<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
+                            crossorigin="anonymous"></script>
                         <ins class="adsbygoogle"
                             style="display:block; text-align:center;"
                             data-ad-layout="in-article"
@@ -257,7 +257,7 @@
                             data-ad-slot="9774392946"></ins>
                         <script>
                             (adsbygoogle = window.adsbygoogle || []).push({});
-                        </script>
+                        </script>-->
     </div>
 </div>
 
