--- a/buildings.html
+++ b/buildings.html
@@ -247,7 +247,7 @@
                 </div>
             </div>
         </div>
-        <!--<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
                             crossorigin="anonymous"></script>
                         <ins class="adsbygoogle"
                             style="display:block; text-align:center;"
@@ -257,7 +257,7 @@
                             data-ad-slot="9774392946"></ins>
                         <script>
                             (adsbygoogle = window.adsbygoogle || []).push({});
-                        </script>-->
+                        </script>
     </div>
 </div>
 
