fa preparation - items

--- a/fellowship-adventures.html
+++ b/fellowship-adventures.html
@@ -37,6 +37,7 @@
     <!-- Our JavaScript -->
     <!--<script src="javascript/all_buildings.js"></script>-->
     <script src="database/variousData.js"></script>
+    <script src="database/faVariousData.js"></script>
     <script src="javascript/fellowship-adventures.js"></script>
     <script src="javascript/global_functions.js"></script>
     <script src="database/items.js"></script>
