trades pieces update

--- a/eventTabs/august_xxii_/pieces.html
+++ b/eventTabs/august_xxii_/pieces.html
@@ -18,7 +18,7 @@
         <table class="table-primary" style="width: 100%; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <th style="width: 40%; text-align: center;">Name of item</th>
+              <th style="width: 40%; text-align: center;">Name of the piece</th>
               <th style="width: 10%; text-align: center;">Level 1</th>
               <th style="width: 10%; text-align: center;">Level 2</th>
               <th style="width: 10%; text-align: center;">Level 3</th>
@@ -105,7 +105,32 @@
     </div>
     </center>
 
-    Which in the worst case scenario would need this amount of opened cups (and <code-forum class="bbCodeInline">*5</code-forum> to get the amount of event currency spent). Let's take the following offer as an example:<br><br>
+    Which makes it possible to realize the following table and calculate, how many times would we need to open cups in the worst-case scenario:<br>
+
+    <div class="bbTable">
+      <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
+        <tbody>
+          <tr>
+            <th style="width: 16%; text-align: center;">Level 1</th>
+            <th style="width: 16%; text-align: center;">Level 2</th>
+            <th style="width: 16%; text-align: center;">Level 3</th>
+            <th style="width: 16%; text-align: center;">Level 4</th>
+            <th style="width: 16%; text-align: center;">Level 5</th>
+            <th style="width: 16%; text-align: center;">Level 6</th>
+          </tr>
+          <tr>
+            <td style="width: 16%; text-align: center;">1</td>
+            <td style="width: 16%; text-align: center;">2</td>
+            <td style="width: 16%; text-align: center;">4</td>
+            <td style="width: 16%; text-align: center;">8</td>
+            <td style="width: 16%; text-align: center;">16</td>
+            <td style="width: 16%; text-align: center;">32</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    Which in the worst-case scenario would cost <code-forum class="bbCodeInline">*5</code-forum> event currency. Let's take the following offer as an example:<br><br>
 
     <center><img src="https://i.ibb.co/qyCTXVF/EL-akcia-august-2022-offer1.png"></center><br>
 
