--- a/eventTabs/august_xxii_/trades.html
+++ b/eventTabs/august_xxii_/trades.html
@@ -34,7 +34,7 @@
         (with the help of the <b>Pieces</b> tab), we do not get the same number every time! <br><br>The <b>costs</b> represent the number of required level 1 items (which would be needed in the worst case scenario),
         so you can decide for yourself, whether your current order is in the lower part
         of this range, or you want to decline your offer and finish other tasks in the meantime. Even though the difference is not huge, it may help you 
-        reach more Grand Prizes after all (and potentially some more pieces from the Dwarven Citadel Set).
+        reach more Grand Prizes after all (and potentially some more pieces from the Dwarven Citadel Set, if that's what you aim for).
     </div>
   
 </div>
@@ -93,7 +93,7 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_a_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",
+                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
                 "ec": "20-22",
                 "ep": 1,
                 "description": `<i>Humble Request</i> (appears in slot <b>1</b>)`,
@@ -130,7 +130,7 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_b_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",
+                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
                 "ec": "16-18",
                 "ep": 1,
                 "description": `<i>Humble Request</i> (appears in slot <b>1</b>)`,
@@ -255,7 +255,7 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_e_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",
+                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
                 "ec": "32-33",
                 "ep": 3,
                 "description": `<i>Rare Request</i> (appears in slot <b>2</b>)`,
@@ -299,10 +299,10 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_f_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",
+                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
                 "ec": "24-26",
                 "ep": 2,
-                "description": `<i>Rare Request</i> (appears in slot <b>2</b>)`,
+                "description": `<i>Uncommon Request</i> (appears in slot <b>2</b>)`,
                 "chances": [
                 {
                     "__class__": "RewardChanceVO",
@@ -343,7 +343,7 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_g_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",
+                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
                 "ec": "42-44",
                 "ep": 3,
                 "description": `<i>Rare Request</i> (appears in slot <b>2</b>)`,
@@ -394,10 +394,10 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_h_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",
+                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
                 "ec": "38-41",
                 "ep": 3,
-                "description": `<i>Extraordinary Request</i> (appears in slot <b>3</b>)`,
+                "description": `<i>Rare Request</i> (appears in slot <b>3</b>)`,
                 "chances": [
                 {
                     "__class__": "RewardChanceVO",
@@ -438,7 +438,7 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_i_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",
+                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
                 "ec": "48-52",
                 "ep": 4,
                 "description": `<i>Extraordinary Request</i> (appears in slot <b>3</b>)`,
@@ -482,7 +482,7 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_j_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",
+                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
                 "ec": "56-56",
                 "ep": 4,
                 "description": `<i>Extraordinary Request</i> (appears in slot <b>3</b>)`,
@@ -526,7 +526,7 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_k_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",
+                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
                 "ec": "48-48",
                 "ep": 4,
                 "description": `<i>Extraordinary Request</i> (appears in slot <b>3</b>)`,
