trades pieces update

--- a/eventTabs/august_xxii_/pieces.html
+++ b/eventTabs/august_xxii_/pieces.html
@@ -78,7 +78,7 @@
      From the visualization we can easily see that the higher the item is, the more level 1 items you need and the whole process gets much slower.
      Now, let's realize, how many level <code-forum class="bbCodeInline">1</code-forum> items we need for a specific item of level <code-forum class="bbCodeInline">N</code-forum>.<br>
      We know that we need 2 items of level <code-forum class="bbCodeInline">L</code-forum> to merge one item of level <code-forum class="bbCodeInline">L+1</code-forum>. In other words, every following level doubles the required number
-     of level <code-forum class="bbCodeInline">L</code-forum> items. Let's consider the following (binary) tree for merging the level <code-forum class="bbCodeInline">4</code-forum> item:<br>
+     of level <code-forum class="bbCodeInline">L</code-forum> items. Let's consider the following tree for merging the level <code-forum class="bbCodeInline">4</code-forum> item:<br>
 
      <center><img src="https://i.ibb.co/R06X0zB/EL-akcia-august-2022-merging-tree.png" style="margin-top: 10px;"></center><br>
 
