--- a/eventTabs/august_xxii_/trades.html
+++ b/eventTabs/august_xxii_/trades.html
@@ -56,8 +56,8 @@ if (typeof chests === "undefined") {
     var chests = {
         "august_xxii_": [
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",
-                "ec": "13-14",
+                "img": "https://i.ibb.co/qyfgyqC/EL-akcia-august-2022-chest0.png",  //HOTOVO
+                "ec": "12-14",
                 "ep": 1,
                 "description": `<i>Humble Request</i> (appears in slot <b>1</b>)`,
                 "chances": [
@@ -93,7 +93,7 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_a_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
+                "img": "https://i.ibb.co/BtSG7VY/EL-akcia-august-2022-chest2.png",  //HOTOVO
                 "ec": "20-22",
                 "ep": 1,
                 "description": `<i>Humble Request</i> (appears in slot <b>1</b>)`,
@@ -130,7 +130,7 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_b_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
+                "img": "https://i.ibb.co/bR8X2sh/EL-akcia-august-2022-chest1.png",  //HOTOVO
                 "ec": "16-18",
                 "ep": 1,
                 "description": `<i>Humble Request</i> (appears in slot <b>1</b>)`,
@@ -174,10 +174,10 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_c_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",
+                "img": "https://i.ibb.co/s3ptY8W/EL-akcia-august-2022-chest4.png",  //HOTOVO
                 "ec": "28-28",
                 "ep": 2,
-                "description": `<i>Humble Request</i> (appears in slot <b>1</b>)`,
+                "description": `<i>Uncommon Request</i> (appears in slot <b>1</b>)`,
                 "chances": [
                 {
                     "__class__": "RewardChanceVO",
@@ -218,7 +218,7 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_d_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",
+                "img": "https://i.ibb.co/58tDg11/EL-akcia-august-2022-chest6.png",  //HOTOVO
                 "ec": "35-37",
                 "ep": 3,
                 "description": `<i>Rare Request</i> (appears in slot <b>2</b>)`,
@@ -255,8 +255,8 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_e_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
-                "ec": "32-33",
+                "img": "https://i.ibb.co/hWGvzxn/EL-akcia-august-2022-chest5.png",  //HOTOVO
+                "ec": "32-34",
                 "ep": 3,
                 "description": `<i>Rare Request</i> (appears in slot <b>2</b>)`,
                 "chances": [
@@ -299,7 +299,7 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_f_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
+                "img": "https://i.ibb.co/hmnx4kN/EL-akcia-august-2022-chest3.png",  //HOTOVO
                 "ec": "24-26",
                 "ep": 2,
                 "description": `<i>Uncommon Request</i> (appears in slot <b>2</b>)`,
@@ -343,7 +343,7 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_g_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
+                "img": "https://i.ibb.co/W3QsWzh/EL-akcia-august-2022-chest8.png",  //HOTOVO
                 "ec": "42-44",
                 "ep": 3,
                 "description": `<i>Rare Request</i> (appears in slot <b>2</b>)`,
@@ -394,7 +394,7 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_h_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
+                "img": "https://i.ibb.co/xKv29z3/EL-akcia-august-2022-chest7.png",  //HOTOVO
                 "ec": "38-41",
                 "ep": 3,
                 "description": `<i>Rare Request</i> (appears in slot <b>3</b>)`,
@@ -438,7 +438,7 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_i_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
+                "img": "https://i.ibb.co/hcCD1fw/EL-akcia-august-2022-chest10.png",  //HOTOVO
                 "ec": "48-52",
                 "ep": 4,
                 "description": `<i>Extraordinary Request</i> (appears in slot <b>3</b>)`,
@@ -482,7 +482,7 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_j_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
+                "img": "https://i.ibb.co/DWr1hVc/EL-akcia-august-2022-chest11.png",  //HOTOVO
                 "ec": "56-56",
                 "ep": 4,
                 "description": `<i>Extraordinary Request</i> (appears in slot <b>3</b>)`,
@@ -526,7 +526,7 @@ if (typeof chests === "undefined") {
                 "id": "reward_pool_event_chest_k_merge_dwarvengame"
             },
             {
-                "img": "https://i.ibb.co/RBGsK6F/EL-akcia-august-2022-chest-1.png",  //HOTOVO
+                "img": "https://i.ibb.co/KKYPVxK/EL-akcia-august-2022-chest9.png",  //HOTOVO
                 "ec": "48-48",
                 "ep": 4,
                 "description": `<i>Extraordinary Request</i> (appears in slot <b>3</b>)`,
