--- a/eventTabs/august_xxii_/pieces.html
+++ b/eventTabs/august_xxii_/pieces.html
@@ -140,6 +140,32 @@
     Because the Cups can also generate the higher-level items than 1, we have a good chance that the final cost will be lower (see the <b>Cups</b> tab to see how exactly these items are generated).
     This is where the nice, randomized mechanic comes into play.<br><br>
 
+    It makes sense to realize the following table if we want to be a bit more optimistic with our drop rate and consider that we most likely won't need
+    to put level 6 together from lots of level 1 pieces only. The following table shows the approximate costs of respective levels (in the value of required dwarven chips):<br>
+
+    <div class="bbTable">
+      <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
+        <tbody>
+          <tr>
+            <th style="width: 16%; text-align: center;">Level 1</th>
+            <th style="width: 16%; text-align: center;">Level 2</th>
+            <th style="width: 16%; text-align: center;">Level 3</th>
+            <th style="width: 16%; text-align: center;">Level 4</th>
+            <th style="width: 16%; text-align: center;">Level 5</th>
+            <th style="width: 16%; text-align: center;">Level 6</th>
+          </tr>
+          <tr>
+            <td style="width: 16%; text-align: center;">5</td>
+            <td style="width: 16%; text-align: center;">6.9</td>
+            <td style="width: 16%; text-align: center;">10.5</td>
+            <td style="width: 16%; text-align: center;">15.6</td>
+            <td style="width: 16%; text-align: center;">24.7</td>
+            <td style="width: 16%; text-align: center;">41.9</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
     After all, it's important to point out that some offers may have different costs everytime they appear. You can see the list of all offers in the <b>Trades</b> tab and see, what
     for the cost ranges they have (the costs' values are always displayed as the number of level <code-forum class="bbCodeInline">1</code-forum> items needed) and so you can 
     find yourself whether your current offer is on the lower end of this range, or if it is more beneficial for you to decline
