--- a/eventTabs/august_xxii_/pieces.html
+++ b/eventTabs/august_xxii_/pieces.html
@@ -75,7 +75,7 @@
        <iframe frameborder="0" width="100%" height="100%" src="https://my.machinations.io/d/Copy-of-Merge-Event---Visualisation/a7e025bcf85e11ec8c2902f943517e50" style="background-color: transparent; border-style: none; border-width: 0px; overflow: hidden;"></iframe>
      </div>
 
-     From the visualization we can easily see that the higher the pieces is, the more level 1 pieces you need and the whole process gets much slower. Let's realize the cost of high-level pieces.<br><br>
+     From the visualization we can easily see that the higher the piece is, the more level 1 pieces you need and the whole process gets much slower. Let's realize the costs of high-level pieces.<br><br>
 
      <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Worst-case scenario ::..<br></h5><br>
 
