--- a/eventTabs/august_xxii_/pieces.html
+++ b/eventTabs/august_xxii_/pieces.html
@@ -146,7 +146,7 @@
     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Average scenario ::..<br></h5><br>
 
     Now, it makes sense to realize a bit more realistic numbers and consider that we most likely won't need
-    to put level 6 together from lots of level 1 pieces only. Let's get away from the worst-case scenario and let's calculate the approximate costs
+    to put level 6 together from lots of level 1 pieces only. Let's get away from the worst-case scenario and let's calculate the average costs
     of specific levels.<br><br>
 
     Let's consider we have 500 dwarven chips at our disposal, which makes it possible to open a cup 100 items. Sticking with the percentual values
