--- a/eventTabs/august_xxii_/pieces.html
+++ b/eventTabs/august_xxii_/pieces.html
@@ -204,7 +204,7 @@
       </table>
     </div>
 
-    Last but not least, it's important to point out that some trade rewards may ask for different combinations of items everytime they appear.
+    Last but not least, it's important to point out that some trade rewards may ask for different combinations of pieces everytime they appear.
     You can see the list of all offers in the <b>Trades</b> tab and see, what
     for the cost ranges they have (the costs' values are always displayed as the number of level <code-forum class="bbCodeInline">1</code-forum> pieces needed) and so you can 
     find yourself whether your current offer is on the lower end of this range, or if it is more beneficial for you to decline
