--- a/admin.html
+++ b/admin.html
@@ -173,6 +173,15 @@ Odmena1<br></h7>
 
 </div>
 
+<div class="container" style="margin-bottom: 20px;">
+    <p>ChestsCosts to selected mpe:</p>
+
+
+    chestsCosts: <input class="form-control-file" type="file" id="chestsCosts" name="filename">
+    mpe (a-g): <input type="text" id="mpe_type"><br>
+    <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="generateMpeChestsCosts()">GENERATE</button>
+
+</div>
 
     
 
