--- a/eventTabs/august_xxii_/trades.html
+++ b/eventTabs/august_xxii_/trades.html
@@ -34,7 +34,19 @@
         (with the help of the <b>Pieces</b> tab), we do not get the same number every time! <br><br>The <b>costs</b> represent the number of required level 1 pieces (which would be needed in the worst case scenario),
         so you can decide for yourself, whether your current order is in the lower part
         of this range, or you want to decline your offer and finish other tasks in the meantime. Even though the difference is not huge, it may help you 
-        reach more Grand Prizes after all (and potentially some more parts of the Dwarven Citadel Set, if that's what you aim for).
+        reach more Grand Prizes after all (and potentially some more parts of the Dwarven Citadel Set, if that's what you aim for).<br><br>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
+                            crossorigin="anonymous"></script> <!-- In-article -->
+                        <ins class="adsbygoogle"
+                            style="display:block; text-align:center;"
+                            data-ad-layout="in-article"
+                            data-ad-format="fluid"
+                            data-ad-client="ca-pub-4154227292627045"
+                            data-ad-slot="9774392946"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                        <br><br>
     </div>
   
 </div>
