--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>Autumn Zodiac event arrived!</strong> All buildings from this event are now in the database (August 18th 2022)</li>
                 <li><strong>A Gateway into the Past event arrived!</strong> All buildings from this event are now in the database and you can find various written guides to help you better understand this brand-new game mechanic (July 7th 2022)</li>
                 <li><strong>Chests Comparator introduced!</strong> Together with the Lucky Little Fin event I'm introducing the brand-new tab in the All Events subpage - the Hoops, allowing you to find the best chests to help you reach the prizes you are aiming for (May 25th 2022)</li>
                 <li><strong>Lucky Little Fin event arrived!</strong> All buildings from this event are now in the database (May 25th 2022)</li>
